fix screen stretch on mobile devices

--- a/web/public/css/global-menu.less
+++ b/web/public/css/global-menu.less
@@ -41,14 +41,14 @@
 
 #jQueryCookieDisclaimer {
   padding-top: 2px;
+  padding: 0px 2px 0px 2px;
 }
 .cdbar {
-  padding: 0px;
   font-size: 14px;
-  height: 25px;
+  height: contain;
 }
 .cdbar .cdbar-text {
-  width: 79.5em;
+  width: 59%;
   margin: 0px;
 }
 .cdbtn {
