--- a/web/public/css/header.less
+++ b/web/public/css/header.less
@@ -12,7 +12,7 @@
   background-image: url("../img/logo.png");
   background-repeat: no-repeat;
   height: 4em;
-  width: 150%;
+  width: 15em;
   background-size: contain;
 }
 .cd-header-button-group {
